# ardrone_essentials

./: README.md  drone.run  joystick.txt
ardrone_autonomy/launch/: ardrone.launch  ardrone.launch~
ardrone_autonomy/src/: ardrone_driver.cpp  ardrone_driver.cpp~
ardrone_tutorials/launch/: ar_joy.launch  ar_joy.launch~  joystick_controller.launch  joystick_controller.launchtemplate  joystick_controller.launchtemplate~
ardrone_tutorials/src/: drone_controller.py
cam_test/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  package.xml  package.xml~
cam_test/launch/: ardrone.launch  ardrone.launch~
cam_test/src/: cam_test.cpp  cam_test.cpp~
tum_ardrone/launch/: ardrone_driver.launch  tum_ardrone.launch
tum_ardrone/logs/144780700027/: logIMU.txt  logPTAM.txt  logPTAMRaw.txt
tum_ardrone/logs/144780700059-0s/: logFilter.txt  logIMU.txt  logPTAM.txt  logPTAMRaw.txt
tum_ardrone/logs/144780700060-0s/: logFilter.txt  logIMU.txt  logPTAM.txt  logPTAMRaw.txt
tum_ardrone/src/UINode/: main_GUI.cpp  main_GUI.cpp~  tum_ardrone_gui.cpp  tum_ardrone_gui.cpp~  tum_ardrone_gui.h  tum_ardrone_gui.h~
tum_ardrone/src/stateestimation/: EstimationNode.cpp
